[package]
name = "awesome-bot"
version = "0.1.0"
authors = ["Rock Neurotiko <miguelglafuente@gmail.com>"]
license = "MIT"
build = "build.rs"

description = "An awesome framework to build Telegram bots up to telegram-bot library."
readme = "README.md"
documentation = ""

repository = "https://github.com/rockneurotiko/awesome-bot"
keywords = ["telegram", "bot", "chat", "api", "library", "framework"]


[dependencies]
telegram-bot = "*"
rustc-serialize = "*"
regex = "*"

[build-dependencies]
rustc_version = "0.1"

[dependencies.scoped_threadpool]
git = "https://github.com/Kimundi/scoped-threadpool-rs"
